crates/descar-cli/tests/snapshots/cli_snapshots__check_full.snap
---
source: crates/descar-cli/tests/cli_snapshots.rs
expression: "format!(\"{args:#?}\")"
---
Args {
    command: Some(
        Check(
            CheckArgs {
                input: "examples/hello.dr",
                logging: LoggingArgs {
                    verbose: 3,
                    quiet: true,
                },
            },
        ),
    ),
}
