crates/descar-cli/tests/snapshots/cli_snapshots__compile_minimal.snap
---
source: crates/descar-cli/tests/cli_snapshots.rs
expression: "format!(\"{args:#?}\")"
---
Args {
    command: Some(
        Compile(
            CompileArgs {
                input: "program.dr",
                output: None,
                optimize: None,
                emit_ir: false,
                diagnostics: false,
                logging: LoggingArgs {
                    verbose: 0,
                    quiet: false,
                },
            },
        ),
    ),
}
