crates/descar-cli/tests/snapshots/cli_snapshots__invalid_optimization.snap
---
source: crates/descar-cli/tests/cli_snapshots.rs
expression: error.to_string()
---
error: invalid value 'turbo' for '--optimize <OPTIMIZE>'
  [possible values: none, basic, aggressive]

For more information, try '--help'.
