crates/descar-cli/tests/snapshots/cli_snapshots__invalid_source_extension.snap
---
source: crates/descar-cli/tests/cli_snapshots.rs
expression: error.to_string()
---
error: invalid value 'program.txt' for '<FILE>': expected a path to a .dr file

For more information, try '--help'.
