crates/descar-cli/tests/snapshots/cli_snapshots__root_command.snap
---
source: crates/descar-cli/tests/cli_snapshots.rs
expression: "format!(\"{args:#?}\")"
---
Args {
    command: None,
}
