crates/descar-cli/tests/snapshots/cli_snapshots__unknown_command.snap
---
source: crates/descar-cli/tests/cli_snapshots.rs
expression: error.to_string()
---
error: unrecognized subcommand 'build'

Usage: descar [COMMAND]

For more information, try '--help'.
