crates/descar-cli/tests/snapshots/cli_snapshots__unknown_compile_option.snap
---
source: crates/descar-cli/tests/cli_snapshots.rs
expression: error.to_string()
---
error: unexpected argument '--unknown' found

  tip: to pass '--unknown' as a value, use '-- --unknown'

Usage: descar compile <FILE>

For more information, try '--help'.
